--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,78 @@
 
 			</section>
 
-			<section class="about"></section>
+			<section class="about">
+				<div class="about__container">
+					<div class="about__title title">Who we are?</div>
+					<div class="about__row">
+						<div class="about__card">
+							<div class="about__card-text">
+								<p>IC SOLUTIONS is a company with a high level expertise in electronic
+									equipment production anf in R/D.</p>
+
+								<p>Instead of other providers, we realize launch of full cycle products. We convert ideas to
+									real
+									to-do list. From design creation to detail technical specification. We covert drawings to a
+									concrete electronic product of clients business.</p>
+
+								<p>We undrestand the main challenge, that stands before business nowadays – to be unique and and
+									have more value than the competitors products in the market of high demand.</p>
+							</div>
+						</div>
+						<div class="about__card">
+							<div class="about__card-text">
+								<p>Success of our products provides by effictive cooperation of our team, our customers from all
+									over the world and special atmosphere of creativity and professionalism.</p>
+
+								<p>We make hard and uncoordinated processes and tasks easy, integrated and complete. By
+									connection
+									of all parts of the production chain, we suggest finished, ready to launch system.</p>
+								​
+								<p>The list of our general services in EMS (Electronic Manufacturing Services) includes total
+									management process from the idea to comlpete realization (design, development, engineering,
+									production, marketing and support).</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="service">
+				<div class="service__container">
+					<div class="service__title title">Our services</div>
+					<div class="service__row">
+						<div class="service__card">
+							<div class="service__card-img">
+								<img src="@img/01.jpg" alt="img">
+							</div>
+							<div class="service__card-title">DEVELOPMENT</div>
+							<div class="service__card-text">Production of electronic systems and separate modules</div>
+						</div>
+						<div class="service__card">
+							<div class="service__card-img">
+								<img src="@img/02.jpg" alt="img">
+							</div>
+							<div class="service__card-title">MANAGEMENT</div>
+							<div class="service__card-text">Solutions for the the supply chain management</div>
+						</div>
+						<div class="service__card">
+							<div class="service__card-img">
+								<img src="@img/03.jpg" alt="img">
+							</div>
+							<div class="service__card-title">PRODUCT LAUNCH</div>
+							<div class="service__card-text">Product launch: introduction, preparation, production</div>
+						</div>
+						<div class="service__card">
+							<div class="service__card-img">
+								<img src="@img/04.jpg" alt="img">
+							</div>
+							<div class="service__card-title">TECHNICALSUPPORT</div>
+							<div class="service__card-text">Technical <br>
+								customers support</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
 		</main>
 		@@include('html/_footer.htm',{})
