--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('html/_head.htm',{
-"title":"IC SOLUTIONS LIMITED"
+"title":"IC解决方案有限公司"
 })
 
 <body>
@@ -14,10 +14,10 @@
 						<div class="main__logo">
 							<img src="@img/logo.png" alt="logo">
 						</div>
-						<h1 class="main__header-title">IC SOLUTIONS LIMITED</h1>
+						<h1 class="main__header-title">IC解决方案有限公司</h1>
 						<div class="main__header-buttons">
-							<a href="index.html" class="main__header-btn btn-red">ENG</a>
-							<a href="chi.html" class="main__header-btn btn-white">中文</a>
+							<a href="en.html" class="main__header-btn  btn-white">ENG</a>
+							<a href="http://icsolutions.hk/" class="main__header-btn btn-red">中文</a>
 						</div>
 					</div>
 				</div>
@@ -26,34 +26,25 @@
 
 			<section class="about">
 				<div class="about__container">
-					<h2 class="about__title title">Who we are?</h2>
+					<h2 class="about__title title">關於我哋</h2>
 					<div class="about__row">
 						<div class="about__card">
 							<div class="about__card-text">
-								<p>IC SOLUTIONS is a company with a high level expertise in electronic
-									equipment production anf in R/D.</p>
+								<p>我哋係一家後生且快速發展公司，擁有電子設備研發和生產方面嘅專業知.</p>
 
-								<p>Instead of other providers, we realize launch of full cycle products. We convert ideas to
-									real
-									to-do list. From design creation to detail technical specification. We covert drawings to a
-									concrete electronic product of clients business.</p>
+								<p>我哋嘅主要競爭優勢係我哋提供由想法到最終實現嘅周期解決方案晒。 我哋將您的想法轉化為具體嘅規格; 我哋創建設計同技術圖紙，最終將成為貴公司電子或機電產品嘅一部分.</p>
 
-								<p>We undrestand the main challenge, that stands before business nowadays – to be unique and and
-									have more value than the competitors products in the market of high demand.</p>
+								<p>
+									我們的企業使命是創造額外的價值，使您的產品在要求苛刻的市場中脫穎而出.</p>
 							</div>
 						</div>
 						<div class="about__card">
 							<div class="about__card-text">
-								<p>Success of our products provides by effictive cooperation of our team, our customers from all
-									over the world and special atmosphere of creativity and professionalism.</p>
+								<p>我哋嘅客戶、我哋嘅創意團隊同我哋創造嘅環境構成咗一套和諧嘅高效和成功運營嘅封閉圈子.</p>
 
-								<p>We make hard and uncoordinated processes and tasks easy, integrated and complete. By
-									connection
-									of all parts of the production chain, we suggest finished, ready to launch system.</p>
-								​
-								<p>The list of our general services in EMS (Electronic Manufacturing Services) includes total
-									management process from the idea to comlpete realization (design, development, engineering,
-									production, marketing and support).</p>
+								<p>我哋為全球信譽良好嘅客戶提供服務。 透過結合創新設計和高效裝配，我哋將複雜嘅生產系統集成到一個完整嘅流程中.</p>
+
+								<p>我哋喺EMS行業（電子製造服務）領域提供完整嘅服務，包括成個生產周期嘅打理，涉及產品嘅完整設計同生產，工程，成本降低系統，最佳製造解決方案和技術支持嘅開發.</p>
 							</div>
 						</div>
 					</div>
@@ -62,36 +53,36 @@
 
 			<section class="service">
 				<div class="service__container">
-					<h2 class="service__title title">Our services</h2>
+					<h2 class="service__title title">服務業</h2>
 					<div class="service__row">
 						<div class="service__card">
 							<div class="service__card-img">
 								<img src="@img/01.jpg" alt="img">
 							</div>
-							<div class="service__card-title">DEVELOPMENT</div>
-							<div class="service__card-text">Production of electronic systems and separate modules</div>
+							<div class="service__card-title">電子糢塊同組件嘅開發</div>
+							<!-- <div class="service__card-text">Production of electronic systems and separate modules</div> -->
 						</div>
 						<div class="service__card">
 							<div class="service__card-img">
 								<img src="@img/02.jpg" alt="img">
 							</div>
-							<div class="service__card-title">MANAGEMENT</div>
-							<div class="service__card-text">Solutions for the the supply chain management</div>
+							<div class="service__card-title">供應鏈管理解決方案</div>
+							<!-- <div class="service__card-text">Solutions for the the supply chain management</div> -->
 						</div>
 						<div class="service__card">
 							<div class="service__card-img">
 								<img src="@img/03.jpg" alt="img">
 							</div>
-							<div class="service__card-title">PRODUCT LAUNCH</div>
-							<div class="service__card-text">Product launch: introduction, preparation, production</div>
+							<div class="service__card-title">新產品嘅介紹同批量生產嘅準備工作</div>
+							<!-- <div class="service__card-text">Product launch: introduction, preparation, production</div> -->
 						</div>
 						<div class="service__card">
 							<div class="service__card-img">
 								<img src="@img/04.jpg" alt="img">
 							</div>
-							<div class="service__card-title">TECHNICALSUPPORT</div>
-							<div class="service__card-text">Technical <br>
-								customers support</div>
+							<div class="service__card-title">售後支持</div>
+							<!-- <div class="service__card-text">Technical <br>
+								customers support</div> -->
 						</div>
 					</div>
 				</div>
@@ -99,23 +90,23 @@
 
 			<section class="industry">
 				<div class="industry__container">
-					<h2 class="industry__title title">Industries</h2>
+					<h2 class="industry__title title">行業</h2>
 					<div class="industry__row">
 						<div class="industry__card">
 							<div class="industry__card-image"><img src="@img/05.jpg" alt="industry"></div>
-							<div class="industry__card-title">Telecommunications</div>
+							<div class="industry__card-title">電信</div>
 						</div>
 						<div class="industry__card">
 							<div class="industry__card-image"><img src="@img/06.jpg" alt="industry"></div>
-							<div class="industry__card-title">Car electronics systems</div>
+							<div class="industry__card-title">汽車電子系統</div>
 						</div>
 						<div class="industry__card">
 							<div class="industry__card-image"><img src="@img/07.jpg" alt="industry"></div>
-							<div class="industry__card-title">Automatization</div>
+							<div class="industry__card-title">自動化</div>
 						</div>
 						<div class="industry__card">
 							<div class="industry__card-image"><img src="@img/08.jpg" alt="industry"></div>
-							<div class="industry__card-title">Internet of things</div>
+							<div class="industry__card-title">物聯網</div>
 						</div>
 					</div>
 				</div>
@@ -124,11 +115,11 @@
 			<section class="contact">
 				<div class="contact__container">
 					<div class="contact__row">
-						<h2 class="contact__title title">Our contacts</h2>
-						<div class="contact__text">SUITE 1802, LIPPO CENTRE, TOWER ONE, 89 QUEENSWAY, ADMIRALTY, HONG KONG
+						<h2 class="contact__title title">聯繫我哋</h2>
+						<div class="contact__text">香港金鐘道89号利寶中心一號樓1802室
 						</div>
 						<a href="mailto:ics.office.hk@gmail.com" class="contact__mail">ics.office.hk@gmail.com</a>
-						<a href="#" data-popup="#popup" class="contact__btn btn-red">Write to us!</a>
+						<a href="#" data-popup="#popup2" class="contact__btn btn-red">畀我哋留言</a>
 					</div>
 				</div>
 			</section>
